[package]
name = "coronabot"
version = "0.1.0"
authors = ["malcolm <malcolmbalch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.23.0"
serde_json = "1.0"
reqwest = {version = "0.10.4", features = ["json"]}
