[package]
name = "coronabot"
version = "0.1.0"
authors = ["malcolm <malcolmbalch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.23.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.10.4", features = ["json"]}
num-format = "0.4.0"
chrono = "0.4.11"
gnuplot = "0.0.37"
uuid = {version = "0.8.1", features = ["v4"]}
rust-s3 = "0.19.0"
mexprp = { git = "https://github.com/xfbs/mexprp", branch="update-2018"}
